# cruise_control_system

./: README.md
1_design_documents/: Cruise_Control_Design_and_Status.pptx
2_source_code/: CMakeLists.txt  package.xml
2_source_code/cruise_control/: CMakeLists.txt
2_source_code/cruise_control/algorithm/: CMakeLists.txt
2_source_code/cruise_control/algorithm/header/: basic_cruise_control.h  concrete_strategy_decorator.h  cruise_algo_factory.h  i_cruise_strategy.h  jerk_control_decorator.h
2_source_code/cruise_control/algorithm/src/: basic_cruise_control.cpp  concrete_strategy_decorator.cpp  cruise_algo_factory.cpp  jerk_control_decorator.cpp
2_source_code/cruise_control/algorithm/test/: CMakeLists.txt  cruise_algo_factory_test.cpp
2_source_code/cruise_control/configuration/: CMakeLists.txt
2_source_code/cruise_control/configuration/header/: cruise_configuration.h
2_source_code/cruise_control/configuration/src/: cruise_configuration.cpp
2_source_code/cruise_control/configuration/test/: CMakeLists.txt  cruise_configuration_test.cpp
2_source_code/cruise_control/cruise_control/header/: cruise_manager.h  cruise_node_runner.h
2_source_code/cruise_control/cruise_control/src/: cruise_manager.cpp  cruise_node_runner.cpp  main_node.cpp
2_source_code/cruise_control/docker/single_container/: Dockerfile  docker-compose.yml
2_source_code/cruise_control/ros/header/: publisher.h  subscriber.h  topic_info.h
2_source_code/cruise_control/vehicle_stub/header/: vehicle_stub.h  vehicle_stub_runner.h
2_source_code/cruise_control/vehicle_stub/src/: main_node.cpp  vehicle_stub.cpp  vehicle_stub_runner.cpp
2_source_code/launch/: cruise_control_node.launch.py  cruise_control_node.launch.xml
3_ros_bag_output/fast_acceleration/: fast_acceleration.db3  metadata.yaml
3_ros_bag_output/normal_acceleration/: metadata.yaml  normal_acceleration.db3
3_ros_bag_output/smooth_acceleration/: metadata.yaml  smooth_acceleration.db3
